# PHP-Compiler-to-Java-byte-code

./: .gitignore  BubleSort.php  CMakeLists.txt  FibNumbers.php  README.md  example.php  example_error.php  launch_parser.bat  lexer.l  lexer_old.l  lexer_sanya.l  main.cpp  parser.tab.c  parser.tab.h  parser.y  php_compiler.sln  php_compiler.vcxproj  php_compiler.vcxproj.filters
RTL/: FatalError.java  Functions.java  Main.java  ObjValue.java  Type.java  TypeValue.java  Val.java  Value.java  ValueObj.java
RTL/src/: Functions.java  ObjValue.java  TypeValue.java  Value.java
code_generation/: ClassCodeGenerator.cpp  ClassCodeGenerator.h  ConstantValue.h  ConstantValueAttribute.h  MethodCodeGenerator.cpp  MethodCodeGenerator.h  WriteBytesToFile.h
code_generation/attributes/: CodeAttribute.h  ConstantValueAttribute.h  SourceFileAttribute.h  TableAttribute.h
code_generation/bytes/: ClassBytes.h  Commands.h  FieldBytes.h  Flags.h  MethodBytes.h  ValueAndBytes.h  WriteBytesToFile.h
parser_classes/: CaseDefaultStmt.cpp  CatchStmtNode.cpp  ExprNode.cpp  ExprType.cpp  ForEachStmtNode.cpp  GetValueNode.cpp  IfStmtNode.cpp  StartNode.cpp  TopStmtNode.cpp  TryCatchStmtNode.cpp  WhileStmtNode.cpp  all_include.cpp  all_include.hpp
parser_classes/AnonFunctionDef/: AnonFunctionDefNode.cpp  AnonFunctionDefNode.hpp  AnonFunctionDefType.cpp
parser_classes/ClassAccessMod/: ClassAccessMod.cpp  ClassAccessModNode.cpp  ClassAccessModNode.hpp
parser_classes/ClassDef/: ClassDefNode.cpp  ClassDefNode.hpp  ClassDefType.cpp
parser_classes/ClassStmt/: ClassExprNode.cpp  ClassExprNode.hpp  ClassExprType.cpp  ClassStmtDeclNode.cpp  ClassStmtDeclNode.hpp  ClassStmtDeclType.cpp  ClassStmtNode.cpp  ClassStmtNode.hpp  ClassStmtType.cpp
parser_classes/ConstDecl/: ConstDeclNode.cpp  ConstDeclNode.hpp
parser_classes/DoWhileStmt/: DoWhileStmtNode.cpp  DoWhileStmtNode.hpp
parser_classes/Expr/: ExprNode.cpp  ExprNode.hpp  ExprType.cpp
parser_classes/ExprFunc/: ExprFuncNode.cpp  ExprFuncNode.hpp  ExprFuncType.cpp
parser_classes/ForEachStmt/: ForEachStmtNode.cpp  ForEachStmtNode.hpp  ForEachStmtType.cpp
parser_classes/ForStmt/: ForStmtNode.cpp  ForStmtNode.hpp  ForStmtType.cpp
parser_classes/Function/: FunctionDefType.cpp
parser_classes/FunctionDef/: FunctionDefNode.cpp  FunctionDefNode.hpp
parser_classes/FunctionStmtDecl/: FunctionStmtDeclNode.cpp  FunctionStmtDeclNode.hpp
parser_classes/GetValue/: GetValueNode.cpp  GetValueNode.hpp
parser_classes/GetValueFunc/: GetValueFuncNode.cpp  GetValueFuncNode.hpp  GetValueFuncType.cpp
parser_classes/GlobalVar/: GlobalVarNode.cpp  GlobalVarNode.hpp
parser_classes/HtmlStmt/: HtmlStmtNode.cpp  HtmlStmtNode.hpp
parser_classes/IfStmt/: IfStmtNode.cpp  IfStmtNode.hpp  IfStmtType.cpp
parser_classes/InterfaceExprDef/: InterfaceExprDefNode.cpp  InterfaceExprDefNode.hpp  InterfaceExprDefType.cpp
parser_classes/InterfaceStmt/: InterfaceStmtDeclNode.cpp  InterfaceStmtDeclNode.hpp  InterfaceStmtNode.cpp  InterfaceStmtNode.hpp
parser_classes/MatchStmt/: MatchArmNode.cpp  MatchArmNode.hpp  MatchArmType.cpp  MatchStmtNode.cpp  MatchStmtNode.hpp
parser_classes/Start/: StartNode.cpp  StartNode.hpp
parser_classes/StaticVar/: StaticVarNode.cpp  StaticVarNode.hpp  StaticVarType.cpp
parser_classes/Stmt/: StmtNode.cpp  StmtNode.hpp  StmtType.cpp
parser_classes/SwitchCaseStmt/: CaseDefaultStmtNode.cpp  CaseDefaultStmtNode.hpp  CaseDefaultType.cpp  SwitchStmtNode.cpp  SwitchStmtNode.hpp  SwitchStmtType.cpp
parser_classes/TopStmt/: TopStmtNode.cpp  TopStmtNode.hpp  TopStmtType.cpp
parser_classes/TraitStmtDecl/: TraitStmtDeclNode.cpp  TraitStmtDeclNode.hpp
parser_classes/TruCatchStmt/: TryStmtNode.cpp
parser_classes/TryCatchStmt/: CatchStmtNode.cpp  CatchStmtNode.hpp  CatchStmtType.cpp  TryCatchStmtNode.cpp  TryCatchStmtNode.hpp  TryCatchStmtType.cpp  TryStmtNode.cpp  TryStmtNode.hpp
parser_classes/Vector classes/: ExprList.cpp  ExprList.hpp
parser_classes/Vector classes/ClassAccessModList/: ClassAccessModList.cpp  ClassAccessModList.hpp
parser_classes/Vector classes/ConstDeclList/: ConstDeclList.hpp
parser_classes/Vector classes/ExprFuncList/: ExprFuncList.cpp
parser_classes/Vector classes/GetValueFuncList/: GetValueFuncList.hpp
parser_classes/Vector classes/IdList/: IdListNode.cpp
parser_classes/Vector classes/InterfaceStmtList/: InterfaceStmtList.hpp
parser_classes/Vector classes/MatchArmList/: MatchArmList.cpp
parser_classes/Vector classes/StaticVarList/: StaticVarList.cpp  StaticVarList.hpp
parser_classes/Vector classes/StmtList/: StmtList.cpp
parser_classes/Vector classes/TopStmtList/: TopStmtList.cpp  TopStmtList.hpp
parser_classes/Vector_classes/: ExprList.cpp  ExprList.hpp
parser_classes/Vector_classes/CaseDefaultStmtList/: CaseDefaultStmtList.cpp  CaseDefaultStmtList.hpp
parser_classes/Vector_classes/ClassAccessModList/: ClassAccessModList.cpp  ClassAccessModList.hpp
parser_classes/Vector_classes/ClassStmtList/: ClassStmtList.cpp  ClassStmtList.hpp
parser_classes/Vector_classes/ConstDeclList/: ConstDeclList.cpp  ConstDeclList.hpp
parser_classes/Vector_classes/ElseIfDotList/: ElseIfDotList.cpp  ElseIfDotList.h
parser_classes/Vector_classes/ExprFuncList/: ExprFuncList.cpp  ExprFuncList.hpp
parser_classes/Vector_classes/GetValueFuncList/: GetValueFuncList.cpp  GetValueFuncList.hpp
parser_classes/Vector_classes/GlobalVarList/: GlobalVarList.cpp  GlobalVarList.hpp
parser_classes/Vector_classes/IdList/: IdListNode.cpp  IdListNode.hpp
parser_classes/Vector_classes/InterfaceStmtList/: InterfaceStmtList.cpp  InterfaceStmtList.hpp
parser_classes/WhileStmt/: WhileStmtNode.cpp  WhileStmtNode.hpp  WhileStmtType.cpp
semantic/: array_in_func_change.php  semantic.cpp  semantic.h
semantic/classScopeContainer/: ClassScopeContainer.cpp  ClassScopeContainer.hpp
semantic/contextType/: ContextType.cpp
test_php_files/: BoolAndWithReadline  BoolAndWithReadline.php  BubleSort.php  DoubleArrayTest.php  FibNumbers.php  FillAlgorithm.php  FloatOps.php  RefAndValTest.php  Strings.php
(+8 files in other folders)
